<?xml version="1.0"?>
<package format="3">
  <name>mapf_nav_executor</name>
  <version>0.0.1</version>
  <description>MAPF waypoint executor using Nav2 NavigateToPose</description>

  <maintainer email="you@example.com">baek</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>   <!-- 추가 -->
  <depend>mapf_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>